Working on getting the dark mode scheme to work!

--- a/index.html
+++ b/index.html
@@ -34,15 +34,13 @@ marysmith@gmail.com" />
 
 		<main>
 			<section>
-				<img src="src/images/google-large-logo.jpg" alt="Google's logo" />
+				<img src="src/images/google-large-logo.png" alt="Google's logo" />
 				<div id="inputSection">
 					<i class="fa-solid fa-magnifying-glass" id="inputIcon"></i>
 					<input id="inputField" type="text" title="Search" autocomplete="off"/>
 					<i class="fa-solid fa-xmark" id="xMark"></i>
 				</div>
-				<a href="#">
-					<button type="button" id="searchBtn">Google Search</button>
-				</a>
+				<button type="button" id="searchBtn">Google Search</button>
 			</section>
 		</main>
 	</section>
